# display

./: .gitignore  CMakeLists.txt  CMakeLists.txt~  README.md
include/: lib.h
src/: display.c  main.c
